# shelf

./: CLAUDE.md  README.md  pyproject.toml  requirements.txt
config/: default.yaml  model_mapping.yaml  shelf_layout.yaml
files/: beginner_guide.md  deploy_rk3588.md  design.md  dev_guide.md
pipeline/: __init__.py  event_engine.py  interaction_monitor.py  output.py  shelf_state.py
pipeline/detector/: rknn_detector.py  roi.py  yolo_detector.py
pipeline/identifier/: item_classifier.py
pipeline/io/: preprocess.py  source.py
pipeline/tracker/: byte_tracker.py
server/: app.py  routes.py
tests/: test_detector.py  test_event_engine.py  test_shelf_state.py  test_tracker.py
tools/: dataset_builder.py  label_tool.py  model_export.py  model_export_rknn.py
